Memory leak in UV image editor related to Undo (and possibly Waveform and Vectorscope) #49139

Closed
opened 2016-08-22 16:11:48 +02:00 by Vuk Gardašević · 4 comments

System Information
AMD X3 455, R7 360, Win7

Blender Version
Tested on: 2.67b, 2.70a, a6ca8a1, 4d8ac1e (windows only sorry i didn't test it on linux this time)

Short description of error
Memory leak when adding a new image in the UV/Image editor, with the T panel (image analysis tools Vectorscope and friends active) and Undo
Examples of the cmd prints:

Error: Not freed memory blocks: 4, total unfreed memory 7.421875 MB
waveform point channel 1 len: 972800 0000000019A80CB8
waveform point channel 2 len: 972800 0000000012B80B88
waveform point channel 3 len: 972800 0000000027BC00B8
vectorscope point channel len: 972800 0000000021370048

Error: Not freed memory blocks: 4, total unfreed memory 5.750000 MB
waveform point channel 1 len: 753664 000000000D2C4B48
waveform point channel 2 len: 753664 000000000D37CB98
waveform point channel 3 len: 753664 000000000D434BE8
vectorscope point channel len: 753664 000000000D4ECC38

Exact steps for others to reproduce the error
Start blender with -d --factory-startup from command line> go to the UV Editing screen layout> make the T panel active (so the image analysis tools are open)> add a new generated image (it seems that doesn't matter if the image is pure black or not) press ok so the image is now in the editor> press Undo so the image is removed from the editor> quit Blender

The errors seems to appear also on image renaming, and seems to compound the leak grows up in size if the several undo operations are done.

example_compound_leak.txt

**System Information** AMD X3 455, R7 360, Win7 **Blender Version** Tested on: 2.67b, 2.70a, a6ca8a1, 4d8ac1e (windows only sorry i didn't test it on linux this time) **Short description of error** Memory leak when adding a new image in the UV/Image editor, with the T panel (image analysis tools Vectorscope and friends active) and Undo Examples of the cmd prints: ``` Error: Not freed memory blocks: 4, total unfreed memory 7.421875 MB waveform point channel 1 len: 972800 0000000019A80CB8 waveform point channel 2 len: 972800 0000000012B80B88 waveform point channel 3 len: 972800 0000000027BC00B8 vectorscope point channel len: 972800 0000000021370048 Error: Not freed memory blocks: 4, total unfreed memory 5.750000 MB waveform point channel 1 len: 753664 000000000D2C4B48 waveform point channel 2 len: 753664 000000000D37CB98 waveform point channel 3 len: 753664 000000000D434BE8 vectorscope point channel len: 753664 000000000D4ECC38 ``` **Exact steps for others to reproduce the error** Start blender with -d --factory-startup from command line> go to the UV Editing screen layout> make the T panel active (so the image analysis tools are open)> add a new generated image (it seems that doesn't matter if the image is pure black or not) press ok so the image is now in the editor> press Undo so the image is removed from the editor> quit Blender The errors seems to appear also on image renaming, and seems to compound the leak grows up in size if the several undo operations are done. [example_compound_leak.txt](https://archive.blender.org/developer/F341190/example_compound_leak.txt)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic
Bastien Montagne self-assigned this 2016-08-22 16:46:27 +02:00

This issue was referenced by a80977cd21

This issue was referenced by a80977cd213d1a158f4292b9809c85a5b2a7a699

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49139
No description provided.