Fix T49139: Memory leak in UV image editor related to Undo (and possibly Waveform and Vectorscope).

Assigning NULL to scopes' data pointer in 'non-UI readfile' context was terribly wrong for sure,
if we'd really want to reset them here we should freed them first.

But we can rather just ignore them here, those are purely runtime data managed by image editor,
no need to touch them here.